fix wscompile tests to work with surefire-M5, remove obsolete tests
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit fbd0bb02f263b290d9d0e349e8c721a21b1a4121)