@@ -216,12 +216,8 @@
                         <id>default-testCompile</id>
                         <configuration>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>junit,ant</arg>
                                 <arg>--add-reads</arg>
-                                <arg>com.sun.tools.ws.wscompile.test=junit</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.tools.ws.wscompile=ant</arg>
+                                <arg>com.sun.tools.ws.wscompile=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -248,6 +244,11 @@
                             <excludes>
                                 <exclude>com.sun.tools.ws.test.wsdl.parser.WSImportSec2Test</exclude>
                             </excludes>
+                            <argLine>
+                                --add-reads com.sun.tools.ws.wscompile=ant
+                                --add-opens com.sun.tools.ws.wscompile/com.sun.tools.ws.ant=com.sun.tools.ws.wscompile.test
+                                --add-opens com.sun.tools.ws.wscompile/com.sun.tools.ws.wscompile=com.sun.tools.ws.wscompile.test
+                            </argLine>
                         </configuration>
                     </execution>
                     <execution>
